<resources>
    <string name="app_name">CodeCombatMobile</string>

    <!--main activity-->
    <string name="description_splash_logo">Splash screen logo</string>
    <string name="error_login">There was a problem logging in CodeCombat. Please try again later.</string>

    <!--navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_title_classrooms">Classrooms</string>
    <string name="nav_title_profile">User profile</string>
    <string name="nav_title_more">More</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_about">About</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_in_used_email">This email is already in use</string>
    <string name="error_in_used_username">Username already taken!</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>

    <!-- more info screen -->
    <string name="title_activity_more_info">Almost there…</string>
    <string name="school_name">School</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone number</string>
    <string name="role">Role</string>
    <string-array name="array_role_list">
        <item>@string/teacher</item>
        <item>@string/technology_coordinator</item>
        <item>@string/consultant</item>
        <item>@string/principal</item>
        <item>@string/superintendent</item>
        <item>@string/parent</item>
    </string-array>
    <string name="technology_coordinator">Technology Coordinator</string>
    <string name="consultant">Consultant</string>
    <string name="principal">Principal</string>
    <string name="superintendent">Superintendent</string>
    <string name="parent">Parent</string>
    <string name="estimated_number_student">Estimated number of students</string>
    <string-array name="array_estimated_students">
        <item>1–10</item>
        <item>11–50</item>
        <item>51–100</item>
        <item>101–200</item>
        <item>201–500</item>
        <item>501–1000</item>
        <item>1000+</item>
    </string-array>
    <string name="error_invalid_phone_number">This phone number is too short</string>
    <string name="create_account">Create account</string>

    <!--student class list-->
    <string name="not_available">Not available</string>
    <string name="no_course_message">This classroom has no courses yet.</string>

    <!--teacher class list-->
    <string name="class_list_activity_title">Current classes</string>
    <plurals name="student_total">
        <item quantity="one">%1$d student</item>
        <item quantity="other">%1$d students</item>
    </plurals>
    <string name="archive_class">Archive</string>
    <string name="language_cover">Language cover</string>
    <string name="search">Search classes</string>

    <!--class detail-->
    <string name="total_student">Student</string>
    <string name="total_playtime">Playtime</string>
    <string name="total_level">Level</string>
    <string name="average_play_time">avg. playtime</string>
    <string name="average_level">avg. level</string>
    <string name="description_icon">icon</string>
    <string name="course_progress">Course progress</string>
    <string name="no_student_message">This classroom has no students yet.</string>
    <string name="cover_transition_name" translatable="false">coverTrans</string>
    <string name="title_enter_classroom_code">Enter the classroom code</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <!-- settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_username_key" translatable="false">prefUsernameKey</string>
    <string name="pref_account_settings_group_title">Account</string>
    <string name="pref_email_title">Email</string>
    <string name="pref_email_key" translatable="false">prefEmailKey</string>
    <string name="pref_notifications_group_title">Notifications</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_notifications_key" translatable="false">notifications</string>
    <string name="sign_out">Sign out</string>

    <!--data util-->
    <string name="pref_user_id_key" translatable="false">prefIdKey</string>
    <string name="pref_user_role_key" translatable="false">prefRoleKey</string>
    <string name="pref_first_name_key" translatable="false">prefFirstNameKey</string>
    <string name="pref_last_name_key" translatable="false">prefLastNameKey</string>

    <!--game level-->
    <string name="error_get_data_message">Sorry, there seems to be a problem. Please try again later.</string>
    <string name="level_loading_message">Loading level…</string>

    <!--code editor-->
    <string name="hide_keyboard">Hide keyboard</string>
    <string name="reset">Reset</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="backspace">Backspace</string>
    <string name="error_cannot_insert">That cannot be inserted there.</string>
    <string name="error_duplicate_variable">Variable \'%s\' is already defined in this scope.</string>
    <string name="error_invalid_variable_name">Invalid variable name \'%s\'.</string>

    <!--game level map-->
    <string name="play">Play</string>
    <string name="your_code">Your code</string>

    <!--profile-->
    <string name="profile_title">Profile</string>
    <string name="completed_levels">completed levels</string>
    <string name="user_level">Level %1$d</string>
    <plurals name="minute">
        <item quantity="zero">minute</item>
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="hour">
        <item quantity="zero">hour</item>
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="level_total">
        <item quantity="zero">%1$d level</item>
        <item quantity="one">%1$d level</item>
        <item quantity="other">%1$d levels</item>
    </plurals>
    <string name="title_singleplayer">Singleplayer</string>
    <string name="title_multiplayer">Multiplayer</string>
    <string name="title_course_total">Course</string>
    <string name="title_track_record">Track records</string>
    <string name="title_achievement_total">Achievement</string>
    <string name="completed">Completed</string>
    <string name="unfinished">Unfinished</string>
    <string name="title_level_sessions">Level sessions</string>
    <plurals name="gem">
        <item quantity="one">%1$d gem</item>
        <item quantity="other">%1$d gems</item>
    </plurals>
</resources>
