<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_account_settings_group_title">
        <EditTextPreference
            android:title="@string/pref_username_title"
            android:key="@string/pref_username_key"
            android:dialogTitle="@string/pref_username_title"
            android:inputType="text" />

        <EditTextPreference
            android:title="@string/pref_email_title"
            android:key="@string/pref_email_key"
            android:dialogTitle="@string/pref_email_title"
            android:inputType="text" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_notifications_group_title">
        <SwitchPreference
            android:title="@string/pref_notifications_title"
            android:key="@string/pref_notifications_key"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>