<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ui.MoreInfoTeacherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/MoreInfoTitleTextView"
            android:text="@string/school_name"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_school_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:inputType="text"
            android:textCursorDrawable="@null"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/MoreInfoTitleTextView"
            android:text="@string/country"/>

        <Spinner
            android:id="@+id/spinner_country_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/MoreInfoTitleTextView"
            android:text="@string/phone_number"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:inputType="phone"
            android:textCursorDrawable="@null"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/MoreInfoTitleTextView"
            android:text="@string/role"/>

        <Spinner
            android:id="@+id/spinner_role"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/array_role_list"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/MoreInfoTitleTextView"
            android:text="@string/estimated_number_student"/>

        <Spinner
            android:id="@+id/spinner_estimated_students"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/array_estimated_students"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            android:background="@drawable/background_login_button"
            android:layout_gravity="bottom"
            android:layout_marginTop="32dp"/>

    </LinearLayout>

</ScrollView>