<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="@drawable/login_background"
    tools:context="tcd.android.com.codecombatmobile.ui.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sign_in"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/action_sign_in"
                    android:gravity="center_horizontal"
                    android:drawablePadding="2dp"/>

                <TextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:text="@string/action_sign_up"
                    android:gravity="center_horizontal"
                    android:drawablePadding="2dp"/>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/card_view_radius"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:id="@+id/ll_info_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="32dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/prompt_email"/>

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/prompt_password"
                        android:layout_marginTop="32dp"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <LinearLayout
                        android:id="@+id/ll_account_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="32dp">

                        <TextView
                            android:id="@+id/tv_student"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:text="@string/student"
                            android:gravity="center_horizontal" />

                        <TextView
                            android:id="@+id/tv_teacher"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:text="@string/teacher"
                            android:gravity="center_horizontal" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_sign_in"
                        android:layout_width="@dimen/sign_in_button_width"
                        android:layout_height="wrap_content"
                        style="?android:textAppearanceSmall"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold"
                        android:background="@drawable/background_login_button"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:text="@string/forgot_password"
                        android:textColor="@android:color/darker_gray"
                        android:layout_marginTop="4dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="italic"
                android:textColor="@android:color/white"
                android:text="@string/or"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_google_sign_in"
                android:layout_width="@dimen/sign_in_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
