<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tcd.android.com.codecombatmobile.ui.ClassDetailActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_cover_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:transitionName="@string/cover_transition_name" >

                <tcd.android.com.codecombatmobile.ui.widget.RatioImageView
                    android:id="@+id/iv_language_cover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:ratio="1:1"
                    android:contentDescription="@string/language_cover"/>

                <FrameLayout
                    android:id="@+id/fl_gradient_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_transparent_to_black"/>

                <TextView
                    android:id="@+id/tv_programming_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/tv_class_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_date_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tv_student_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"/>

            <android.support.v7.widget.GridLayout
                android:id="@+id/gl_card_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="3"
                app:useDefaultMargins="true"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:text="@string/student"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_student_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="true"
                    android:paddingBottom="32dp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="auto"
        android:src="@drawable/ic_add_white_24dp"
        android:layout_gravity="bottom|end"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"/>

</android.support.constraint.ConstraintLayout>
